@@ -99,7 +99,7 @@ public class JavaKeyStoreProvider extends CredentialProvider {
         if (pwdFile != null) {
           InputStream is = pwdFile.openStream();
           try {
-            password = IOUtils.toCharArray(is);
+            password = IOUtils.toString(is).trim().toCharArray();
           } finally {
             is.close();
           }
